@@ -11,6 +11,7 @@ h3. 0.6.1 unreleased
 * add 'The Big Picture' theme from startbootstrap.com
 * add 'Thumbnail Gallery' theme from startbootstrap.com
 * add 'Full Width Pics' theme from startbootstrap.com
+* add '1 Col Portfolio' theme from startbootstrap.com
 
 h3. 0.6.0 May 10, 2015
 
